# graphics

./: CMakeLists.txt
src/: glad.c  glad.h  main.cpp  shader.fs  shader.vs  shader_s.h
